[package]
name              = "darwin-kperf"
authors.workspace = true
edition.workspace = true
license           = "MIT OR Apache-2.0"
publish.workspace = true
version.workspace = true

[dependencies]
darwin-kperf-events = { path = "events", public = true }
darwin-kperf-sys    = { path = "sys", public = true }

[lints]
workspace = true
