[package]
name = "deer"
version = "0.0.0-reserved"
authors = { workspace = true }
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"
description = "A backend-agnostic fail-slow deserialization framework"
documentation = "https://docs.rs/deer"
repository = "https://github.com/hashintel/hash/tree/main/libs/deer"
keywords = ["deserialize", "serde", "no_std"]
categories = ["no-std", "rust-patterns"]
exclude = ["package.json"]
publish = false

[dependencies]
# Public workspace dependencies
error-stack = { workspace = true, public = true, default-features = false }

# Public third-party dependencies
erased-serde = { workspace = true, public = true, features = ['alloc'] }

# Private workspace dependencies

# Private third-party dependencies
serde = { workspace = true, default-features = false, features = ['alloc', 'derive'] }
num-traits = { version = "0.2.19", default-features = false }

[dev-dependencies]
serde_json = { workspace = true, features = ['arbitrary_precision'] }
similar-asserts = { version = "1.5.0", features = ['serde'] }
deer-desert = { path = "./desert", features = ['pretty'] }
proptest = "1.5.0"
paste = "1.0.15"
approx = "0.5.1"
seq-macro = "0.3.5"

[build-dependencies]
rustc_version = "0.4.0"

[features]
default = ['std']
std = ['serde/std', 'error-stack/std']
arbitrary-precision = []

[lints]
workspace = true

[package.metadata.sync.turborepo]
ignore = true
