[package]
name          = "deer"
version       = "0.0.0-reserved"
authors       = { workspace = true }
edition       = "2021"
rust-version  = "1.65"
license       = "MIT OR Apache-2.0"
description   = "A backend-agnostic fail-slow deserialization framework"
documentation = "https://docs.rs/deer"
repository    = "https://github.com/hashintel/hash/tree/main/libs/deer"
keywords      = ["deserialize", "serde", "no_std"]
categories    = ["no-std", "rust-patterns"]
exclude       = ["package.json"]
publish       = false

[dependencies]
# Public workspace dependencies
error-stack = { workspace = true, public = true, default-features = false, features = ["unstable"] }

# Public third-party dependencies
erased-serde = { workspace = true, public = true, features = ['alloc'] }
num-traits   = { workspace = true, public = true }
serde        = { workspace = true, public = true, features = ['alloc', 'derive'] }

# Private workspace dependencies

# Private third-party dependencies

[dev-dependencies]
approx          = { workspace = true }
deer-desert     = { path = "./desert", features = ['pretty'] }
paste           = { workspace = true }
proptest        = { workspace = true, features = ["std"] }
seq-macro       = { workspace = true }
serde_json      = { workspace = true, features = ['arbitrary_precision'] }
similar-asserts = { workspace = true, features = ["serde"] }

[build-dependencies]
rustc_version = { workspace = true }

[features]
default             = ['std']
std                 = ['serde/std', 'error-stack/std']
arbitrary-precision = []

[lints]
workspace = true

[package.metadata.sync.turborepo]
ignore = true
