[package]
name = "sarif"
version = "0.0.0-reserved"
authors = ["HASH"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Representation of the SARIF specification in Rust"
documentation = "https://docs.rs/sarif"
readme = "README.md"
repository = "https://github.com/hashintel/hash/tree/main/libs/sarif"
keywords = ["sarif", "codeql", "serde", "static-analysis", "tools"]
categories = ["data-structures", "development-tools", "parsing"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
semver = { version = "1", features = ["serde"] }

[features]
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "1"
jsonschema = { version = "0.17.0", default-features = false }
