[package]
name          = "sarif"
version       = "0.0.0-reserved"
authors       = { workspace = true }
edition       = "2021"
license       = "MIT OR Apache-2.0"
description   = "Representation of the SARIF specification in Rust"
documentation = "https://docs.rs/sarif"
readme        = "README.md"
repository    = "https://github.com/hashintel/hash/tree/main/libs/sarif"
keywords      = ["no_std", "sarif", "serde", "static-analysis", "tools"]
categories    = ["no-std", "data-structures", "development-tools", "parsing"]
publish       = false

[dependencies]
# Public workspace dependencies

# Public third-party dependencies
semver     = { version = ">=1", public = true, default-features = false }
serde_core = { version = ">=1", public = true, default-features = false, optional = true }
serde_json = { version = ">=1", public = true, default-features = false, features = ["alloc"], optional = true }
url        = { version = ">=2", public = true, default-features = false }
uuid       = { version = ">=1", public = true, default-features = false }

# Private workspace dependencies

# Private third-party dependencies
serde = { version = ">=1", default-features = false, features = ["alloc", "derive"], optional = true }

[features]
serde = ["dep:serde_core", "dep:serde", "dep:serde_json", "semver/serde", "url/serde", "uuid/serde"]

[dev-dependencies]
jsonschema = { workspace = true }

[lints]
workspace = true
