cargo-features = ["edition2024"]

[package]
name = "graph-integration"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dev-dependencies]
graph = { workspace = true }
graph-test-data = { workspace = true }
graph-types = { workspace = true }
temporal-versioning = { workspace = true }
authorization = { workspace = true }
hash-tracing = { workspace = true }

error-stack = { workspace = true, features = ["spantrace"] }
type-system = { workspace = true }

futures = { workspace = true, default-features = false }
pretty_assertions = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["macros"] }
tokio-postgres = { workspace = true, default-features = false }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true

[[test]]
name = "postgres"
path = "postgres/lib.rs"

[package.metadata.sync.turborepo]
extra-dev-dependencies = [{ name = "@apps/hash-graph", version = "0.0.0-private" }]
