[package]
name = "graph-integration"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dev-dependencies]
# Private workspace dependencies
authorization = { workspace = true }
error-stack = { workspace = true, features = ["spantrace"] }
graph = { workspace = true }
graph-test-data = { workspace = true }
graph-types = { workspace = true }
hash-tracing = { workspace = true }
temporal-versioning = { workspace = true }
type-system = { workspace = true }

# Private third-party dependencies
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["macros"] }
tokio-postgres = { workspace = true, default-features = false }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }

[lints]
workspace = true

[[test]]
name = "postgres"
path = "postgres/lib.rs"

[package.metadata.sync.turborepo]
extra-dev-dependencies = [{ name = "@apps/hash-graph", version = "0.0.0-private" }]
