[package]
name = "graph-benches"
version = "0.0.0"
edition = "2021"
publish = false
# If we leave `autobenches` enabled, then every module in the benches folder is compiled to be a standalone binary,
# which means we can't use modules to group shared logic (importing via `super`, etc.)
#
# We specifically identify the binary using the [[bench]] attribute below. Specific groups of benchmarks are still
# runnable by specifying them: `cargo bench -- <NAME OF BENCHMARKS>
autobenches = false

[dev-dependencies]
criterion = { version = "0.4.0", features = ["async_tokio", "html_reports"] }
criterion-macro = "0.4.0"
futures = "0.3.26"
graph = { path = "../lib/graph", features = ["__internal_bench"] }
graph-test-data = { path = "../tests/test_data" }
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.7", default-features = false }
type-system = { git = "https://github.com/blockprotocol/blockprotocol", rev = "3206ccb" }
uuid = { version = "1.3.0", features = ["v4", "serde"] }

[[bench]]
name = "read_scaling"
path = "read_scaling/lib.rs"

[[bench]]
name = "representative_read"
path = "representative_read/lib.rs"

[[bench]]
name = "writes"
path = "writes/lib.rs"
