[package]
name = "graph-benches"
version = "0.0.0"
edition = "2021"
publish = false
# If we leave `autobenches` enabled, then every module in the benches folder is compiled to be a standalone binary,
# which means we can't use modules to group shared logic (importing via `super`, etc.)
#
# We specifically identify the binary using the [[bench]] attribute below. Specific groups of benchmarks are still
# runnable by specifying them: `cargo bench -- <NAME OF BENCHMARKS>
autobenches = false

[dev-dependencies]
graph = { workspace = true }
graph-test-data = { workspace = true }
graph-types = { workspace = true }
temporal-versioning = { workspace = true }
authorization = { workspace = true }

type-system = { workspace = true }

criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
criterion-macro = "0.4.0"
futures = { workspace = true }
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
tokio = { workspace = true, features = ["macros"] }
tokio-postgres = { version = "0.7.10", default-features = false }
uuid = { version = "1.7.0", features = ["v4", "serde"] }

[[bench]]
name = "read_scaling"
path = "read_scaling/lib.rs"

[[bench]]
name = "representative_read"
path = "representative_read/lib.rs"

[[bench]]
name = "writes"
path = "writes/lib.rs"
