[workspace]
members = ["lib/*", "bin/*", "bench"]
default-members = ["bin/hash_graph"]

[workspace.package]
description = "The entity-graph query-layer for the HASH datastore"
readme = "README.md"
version = "0.0.0"
edition = "2021"
authors = ["HASH"]
license-file = "LICENSE.md"
publish = false
repository = "https://github.com/hashintel/hash/tree/main/packages/graph/hash_graph"

[profile.production]
inherits = "release"
lto = "fat"
strip = "symbols"
