[package]
name              = "hash-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
# Public workspace dependencies
error-stack         = { workspace = true, public = true, optional = true, features = ["std"] }
harpc-wire-protocol = { workspace = true, public = true, optional = true }
postgres-types      = { workspace = true, public = true, optional = true }
serde               = { workspace = true, public = true, optional = true }

# Public third-party dependencies
bytes      = { workspace = true, public = true }
regex      = { workspace = true, public = true, optional = true }
tokio-util = { workspace = true, public = true, optional = true, features = ["codec"] }

# Private workspace dependencies

# Private third-party dependencies
dashu-base   = { workspace = true, optional = true, features = ["std"] }
dashu-float  = { workspace = true, optional = true }
derive-where = { workspace = true, optional = true }
derive_more  = { workspace = true, optional = true, features = ["display", "error"] }
serde_json   = { workspace = true, optional = true }
time         = { workspace = true, optional = true, features = ["macros", "serde", "parsing", "formatting"] }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }

[features]
bytes = [
    "dep:serde",
    "dep:derive-where",
    "dep:serde_json",
    "dep:tokio-util",
    "dep:error-stack",
]
serde = ["dep:serde", "dep:time", "dep:regex"]
harpc = ["dep:harpc-wire-protocol", "dep:tokio-util", "dep:error-stack"]
numeric = ["dep:dashu-base", "dep:dashu-float", "dep:derive_more"]
postgres = ["dep:postgres-types"]

[lints]
workspace = true
