[package]
name              = "hash-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
# Public workspace dependencies
error-stack         = { workspace = true, public = true, optional = true, features = ["std"] }
harpc-wire-protocol = { workspace = true, public = true, optional = true }
postgres-types      = { workspace = true, public = true, optional = true }

# Public third-party dependencies
bytes      = { workspace = true, public = true }
regex      = { workspace = true, public = true, optional = true }
serde_core = { workspace = true, public = true, optional = true }
specta     = { workspace = true, public = true, optional = true, features = ["derive"] }
tokio-util = { workspace = true, public = true, optional = true, features = ["codec"] }
utoipa     = { workspace = true, public = true, optional = true }
uuid       = { workspace = true, public = true, optional = true, features = ["serde"] }

# Private workspace dependencies

# Private third-party dependencies
dashu-base     = { workspace = true, optional = true, features = ["std"] }
dashu-float    = { workspace = true, optional = true }
derive-where   = { workspace = true, optional = true }
derive_more    = { workspace = true, optional = true, features = ["display", "error"] }
serde          = { workspace = true, optional = true }
serde_json     = { workspace = true, optional = true }
simple-mermaid = { workspace = true }
time           = { workspace = true, optional = true, features = ["macros", "serde", "parsing", "formatting"] }

[dev-dependencies]
harpc-types  = { workspace = true }
hash-codegen = { workspace = true }
insta        = { workspace = true }
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }

[[test]]
name              = "codegen"
required-features = ["codegen", "numeric"]

[features]
codegen = ["dep:specta"]
bytes = [
    "dep:serde_core",
    "dep:serde",
    "dep:derive-where",
    "dep:serde_json",
    "dep:tokio-util",
    "dep:error-stack",
]
serde = [
    "dep:serde_core",
    "dep:serde",
    "dep:time",
    "dep:regex",
    "dep:uuid",
    "dep:derive_more",
]
harpc = ["dep:harpc-wire-protocol", "dep:tokio-util", "dep:error-stack"]
numeric = ["dep:dashu-base", "dep:dashu-float", "dep:derive_more"]
postgres = ["dep:postgres-types"]
utoipa = ["dep:utoipa"]

[lints]
workspace = true


[package.metadata.sync.turborepo]
extra-dev-dependencies = [
    { name = "@local/tsconfig", version = "workspace:*" },
]
