[package]
name              = "hash-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
# Public workspace dependencies

# Public third-party dependencies
specta = { workspace = true, public = true, features = ["derive"] }

# Private workspace dependencies

# Private third-party dependencies
oxc            = { workspace = true, features = ["codegen"] }
simple-mermaid = { workspace = true }

[dev-dependencies]
insta         = { workspace = true }
libtest-mimic = { workspace = true }
type-system   = { workspace = true, features = ["codegen"] }

[lints]
workspace = true

[[test]]
name    = "standalone-types"
path    = "tests/standalone-types/main.rs"
harness = false


[package.metadata.sync.turborepo]
ignore-dev-dependencies = [
    "@blockprotocol/type-system-rs",
]
