cargo-features = ["edition2024"]

[package]
name = "authorization"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
codec.workspace = true
graph-types.workspace = true

error-stack.workspace = true
type-system.workspace = true

serde = { workspace = true, features = ["derive", "unstable"] }
tokio.workspace = true
tracing = { workspace = true }

derive-where = { workspace = true }
futures = { version = "0.3.30", default-features = false }
serde_json = { workspace = true }
serde_plain = "1.0.2"

reqwest = { version = "0.12.5", default-features = false, features = ["json", "stream"] }
tokio-util = { version = "0.7.11", features = ["io"] }
uuid = { workspace = true, default-features = false, features = ["v5"] }

utoipa = { version = "4.2.3", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
utoipa = ["dep:utoipa"]

[lints]
workspace = true
