cargo-features = ["edition2024"]

[package]
name = "authorization"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
# Public workspace dependencies
graph-types = { workspace = true, public = true }

# Public third-party dependencies

# Private workspace dependencies
codec = { workspace = true }
error-stack = { workspace = true }
type-system = { workspace = true }

# Private third-party dependencies
derive-where = { workspace = true }
futures = { workspace = true, default-features = false }
reqwest = { workspace = true, public = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive", "unstable"] }
serde_json = { workspace = true }
serde_plain = "1.0.2"
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
tracing = { workspace = true }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true, default-features = false, features = ["v5"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
utoipa = ["dep:utoipa"]

[lints]
workspace = true
