[package]
name = "hash-graph-rpc"
authors.workspace = true
edition.workspace = true
version = "0.0.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
graph-types = { workspace = true }
# due to feature selection cannot use workspace
authorization = { path = "../hash-authorization", default-features = false }

async-trait = "0.1.74"
base64 = "0.21.5"
bytes = { version = "1.5.0", features = ["serde"] }
const-fnv1a-hash = "1.1.0"
error-stack = { workspace = true, features = ["serde"] }
integer-encoding = "4.0.0"
libp2p = { version = "0.53.2", features = ['noise', 'yamux', 'request-response', 'identify', 'macros'] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.51"
tokio = { version = "1.35.0", features = ["io-util", "macros", "time", "sync", "rt"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
tracing = "0.1.40"
uuid = "1.6.1"
paste = "1.0.14"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libp2p = { version = "0.53.2", features = ['tokio', 'tcp', 'dns', 'websocket'] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
graph-types = { workspace = true, features = ["wasm"] }
authorization = { path = "../hash-authorization", default-features = false, features = ["wasm"] }

libp2p = { version = "0.53.2", features = ['wasm-bindgen', 'websocket-websys'] }
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
serde-wasm-bindgen = "0.5"
tsify = { version = "0.4.5", features = ["js"] }

[dev-dependencies]
test-log = { version = "0.2.14", default-features = false, features = ["trace"] }
tokio = { version = "1.35.0", features = ['rt-multi-thread'] }
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["v4"] }
