[package]
name = "hash-graph-rpc"
authors.workspace = true
edition.workspace = true
version = "0.0.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
graph-types = { workspace = true }
hash-status = { workspace = true }
# due to feature selection cannot use workspace
authorization = { path = "../hash-authorization", default-features = false }

async-trait = "0.1.74"
base64 = "0.21.5"
bytes = { version = "1.5.0", features = ["serde"] }
const-fnv1a-hash = "1.1.0"
error-stack = { workspace = true, features = ["serde"] }
integer-encoding = "4.0.0"
libp2p = { version = "0.53.2", features = ['noise', 'yamux', 'request-response', 'identify', 'macros'], git = "https://github.com/indietyp/rust-libp2p.git", branch = "bm/nodejs-interval" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.51"
tokio = { version = "1.35.0", features = ["io-util", "macros", "sync"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
tracing = "0.1.40"
uuid = "1.6.1"
paste = "1.0.14"
async-recursion = "1.0.5"

specta = { version = "2.0.0-rc.7", optional = true, features = ["functions", "serde"] }
inventory = { version = "0.3.14", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.35.1", features = ["rt"] }
libp2p = { version = "0.53.2", features = ['tokio', 'tcp', 'dns', 'websocket'], git = "https://github.com/indietyp/rust-libp2p.git", branch = "bm/nodejs-interval" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
graph-types = { workspace = true, features = ["wasm"] }
authorization = { path = "../hash-authorization", default-features = false, features = ["wasm"] }

libp2p = { version = "0.53.2", features = ['wasm-bindgen', 'websocket-websys'], git = "https://github.com/indietyp/rust-libp2p.git", branch = "bm/nodejs-interval" }
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
serde-wasm-bindgen = "0.5"
tsify = { version = "0.4.5", features = ["js"] }
web-sys = { version = "0.3.66", features = ["console", "WebSocket", "Window"] }
console_error_panic_hook = "0.1.7"

specta = { version = "2.0.0-rc.7", features = ["functions", "serde"] }

[features]
wasm = ["dep:specta", "authorization/wasm", "graph-types/wasm", "dep:inventory"]

[dev-dependencies]
test-log = { version = "0.2.14", default-features = false, features = ["trace"] }
tokio = { version = "1.35.0", features = ['rt-multi-thread', 'time'] }
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["v4"] }
specta = { version = "2.0.0-rc.7", features = ["typescript"] }

[[example]]
name = "collect_types"
required-features = ["wasm"]
